--- a/style.css
+++ b/style.css
@@ -1,32 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
-        rel="stylesheet">
-    <title>poorab patel</title>
-</head>
-[2:47 pm, 15/02/2023] +91 74704 96248: git status
-[2:48 pm, 15/02/2023] +91 74704 96248: git init
-[2:51 pm, 15/02/2023] +91 74704 96248: git config user.name
-[2:52 pm, 15/02/2023] +91 74704 96248: git config user.email
-[2:56 pm, 15/02/2023] +91 74704 96248: git add -A
-[3:04 pm, 15/02/2023] +91 74704 96248: git commit -m "added html"
-[3:06 pm, 15/02/2023] +91 74704 96248: <div class="top-container">
-      <img src="cloud.png" class="cloud-1" alt="">
-      <h1 class="title">I'm poorab.</h1>
-      <h2 class="title">I'm a web developer</h2>
-      <img src="mountain.png" alt="" class="mountain">
-      <img src="cloud.png" class="cloud-2" alt="">
-    </div>
-[3:10 pm, 15/02/2023] +91 74704 96248: .top-container {
+.top-container {
     background-color: #CAF0F8;
   
       text-align: center;
